[gd_scene load_steps=16 format=3 uid="uid://cw05l6nq3tc54"]

[ext_resource type="PackedScene" uid="uid://yjttqehhf2w4" path="res://Scenes/abstract_ingredient.tscn" id="1_ku2gi"]
[ext_resource type="PackedScene" uid="uid://u3lfp7bvh8v6" path="res://Scenes/mix_holder.tscn" id="4_uoe76"]
[ext_resource type="PackedScene" uid="uid://2ei4vqct5fgr" path="res://Scenes/client_tile.tscn" id="5_mdyf4"]
[ext_resource type="Resource" uid="uid://dhe38oi674gn" path="res://Resources/Bases/beer.tres" id="5_xtt3m"]
[ext_resource type="PackedScene" uid="uid://dv7o36lwhf2h3" path="res://Scenes/trash.tscn" id="6_nvdae"]
[ext_resource type="Resource" uid="uid://c8amr3r5lgprb" path="res://Resources/Containers/bowl.tres" id="6_pdhmi"]
[ext_resource type="Resource" uid="uid://bq5v7b0lj8ggw" path="res://Resources/Bases/building.tres" id="6_uwm81"]
[ext_resource type="Resource" uid="uid://b4d11f5dmdks2" path="res://Resources/Containers/cup.tres" id="7_he073"]
[ext_resource type="Resource" uid="uid://b2d4ccmmcd2vl" path="res://Resources/Additionals/ant.tres" id="8_lx8mu"]
[ext_resource type="Script" path="res://Scripts/order_generator.gd" id="10_5gpj7"]
[ext_resource type="Script" path="res://Scripts/game_manager.gd" id="10_11bek"]
[ext_resource type="PackedScene" uid="uid://dpskv36p3tjfs" path="res://Scenes/mix_displayer.tscn" id="11_2afnp"]
[ext_resource type="Script" path="res://Scripts/game_timer.gd" id="12_5d31o"]
[ext_resource type="Script" path="res://Scripts/order_manager.gd" id="14_fw2fn"]
[ext_resource type="PackedScene" uid="uid://52sp7r23y60o" path="res://Scenes/pause_handler.tscn" id="15_v72wu"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Holder" parent="." node_paths=PackedStringArray("root_node") instance=ExtResource("4_uoe76")]
position = Vector2(114, 146)
root_node = NodePath("..")

[node name="ClientTile" parent="." node_paths=PackedStringArray("holder") instance=ExtResource("5_mdyf4")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 248.0
offset_top = 1.0
offset_right = 315.0
offset_bottom = 32.0
grow_horizontal = 1
grow_vertical = 1
holder = NodePath("../Holder")

[node name="ClientTile2" parent="." node_paths=PackedStringArray("holder") instance=ExtResource("5_mdyf4")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 248.0
offset_top = 41.0
offset_right = 315.0
offset_bottom = 72.0
grow_horizontal = 1
grow_vertical = 1
text = "Client 2"
holder = NodePath("../Holder")

[node name="Trash" parent="." node_paths=PackedStringArray("holder") instance=ExtResource("6_nvdae")]
layout_mode = 0
offset_left = -15.0
offset_top = 124.0
offset_right = 52.0
offset_bottom = 184.0
holder = NodePath("../Holder")

[node name="Beer" parent="." instance=ExtResource("1_ku2gi")]
position = Vector2(46, 85)
ingredient_res = ExtResource("5_xtt3m")

[node name="Building" parent="." instance=ExtResource("1_ku2gi")]
position = Vector2(97, 85)
ingredient_res = ExtResource("6_uwm81")

[node name="Bowl" parent="." instance=ExtResource("1_ku2gi")]
position = Vector2(98, 29)
ingredient_res = ExtResource("6_pdhmi")

[node name="Cup" parent="." instance=ExtResource("1_ku2gi")]
position = Vector2(48, 29)
ingredient_res = ExtResource("7_he073")

[node name="Ant" parent="." instance=ExtResource("1_ku2gi")]
position = Vector2(70, 147)
ingredient_res = ExtResource("8_lx8mu")

[node name="GameManager" type="Node" parent="." node_paths=PackedStringArray("game_timer", "order_generator", "order_manager", "order_num_label")]
script = ExtResource("10_11bek")
game_timer = NodePath("GameTimer")
order_generator = NodePath("OrderGenerator")
order_manager = NodePath("OrderManager")
order_num_label = NodePath("OrderNumLabel")

[node name="GameTimer" type="Node2D" parent="GameManager"]
position = Vector2(151, 82)
script = ExtResource("12_5d31o")

[node name="Timer" type="Timer" parent="GameManager/GameTimer"]
one_shot = true

[node name="Label" type="Label" parent="GameManager/GameTimer"]
offset_right = 40.0
offset_bottom = 25.0

[node name="OrderNumLabel" type="Label" parent="GameManager"]
offset_left = 149.0
offset_top = 114.0
offset_right = 189.0
offset_bottom = 139.0

[node name="OrderGenerator" type="Node" parent="GameManager" node_paths=PackedStringArray("root_node")]
script = ExtResource("10_5gpj7")
root_node = NodePath("../..")

[node name="OrderManager" type="Node" parent="GameManager" node_paths=PackedStringArray("root_node", "mix_displayer1", "mix_displayer2")]
script = ExtResource("14_fw2fn")
root_node = NodePath("../..")
mix_displayer1 = NodePath("OrderDisplay1")
mix_displayer2 = NodePath("OrderDisplay2")

[node name="OrderDisplay1" parent="GameManager/OrderManager" instance=ExtResource("11_2afnp")]
position = Vector2(152, 15)

[node name="OrderDisplay2" parent="GameManager/OrderManager" instance=ExtResource("11_2afnp")]
position = Vector2(194, 15)

[node name="PauseHandler" parent="." node_paths=PackedStringArray("_timers") instance=ExtResource("15_v72wu")]
_timers = [NodePath("../GameManager/GameTimer/Timer")]

[connection signal="timeout" from="GameManager/GameTimer/Timer" to="GameManager" method="_on_timer_end"]
[connection signal="order_completed" from="GameManager/OrderManager" to="GameManager" method="_on_order_completed"]
